Fix broken inputs

--- a/ckanext/amplus/assets/css/custom.css
+++ b/ckanext/amplus/assets/css/custom.css
@@ -13289,7 +13289,7 @@ a:hover, a:focus, a:active {
   min-width: 100%;
 }
 
-.form-group {
+.form-group-display-end {
   display: flex;
   justify-content: flex-end;
 }
